@@ -497,6 +497,13 @@ span.texhtml {
 	font-family: serif;
 }
 
+/* Have a checkered background on images on the description pages and in galleries
+   to make transparency visible
+*/
+#file img, .gallerybox .thumb img {
+	background: url(Checker-16x16.png) repeat;
+}
+
 /*
 ** classes for special content elements like town boxes
 ** intended to be referenced directly from the wiki src
